# nonogram

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  requirements.txt  rustfmt.toml
nonogram/: katana_source.py  solver.py
ocr/: cli.py  katana_source.py
solver/: Cargo.toml  main.rs  nonogram.rs
solver/nonogram/: assumption.rs  field.rs  line.rs
solver/nonogram/line/: tests.rs
solver/src/: main.rs  nonogram.rs
solver/src/nonogram/: assumption.rs  common.rs  field.rs  line.rs  reachability_graph.rs
solver/src/nonogram/line/: tests.rs
tests/: test_solver.py
