[package]
name = "nono-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nono-solver"
path = "solver/main.rs"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.17", features = ["derive"] }
crossbeam = "0.8.4"
itertools = "0.13"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.profiling]
inherits = "release"
debug = true