[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.13"
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.profiling]
inherits = "release"
debug = true
